[project]
name = "cleaning-tips"
version = "0.1.0"
description = "A small program to get cleaning tips every now and then."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]
